# asq

./: .bumpversion.cfg  .gitignore  .hgignore  .travis.yml  AsqDocumentation.md  CHANGES.txt  DESCRIPTION.rst  DevelopmentNotes.md  DropLast.md  FrontPage.md  IdeasAndNotes.md  LICENCE.txt  MANIFEST  MANIFEST.in  PreviousCurrentNext.md  ProjectHome.md  README.rst  README.txt  RoadMap.md  TableOfContents.md  UnitTests.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
asq/: __init__.py  _portability.py  _types.py  comparers.py  extension.py  grouping.py  indexedelement.py  initiators.py  lookup.py  namedelements.py  parallel_queryable.py  portability.py  predicates.py  queryable.py  queryables.py  record.py  selectors.py  version.py
docs/: Makefile  make.bat
examples/: mandelbrot.py  pupils.py
test/: test_aggregate.py  test_all.py  test_any.py  test_as_parallel.py  test_asq.py  test_average.py  test_comparers.py  test_concat.py  test_contains.py  test_count.py  test_default_if_empty.py  test_difference.py  test_distinct.py  test_element_at.py  test_empty.py  test_extension.py  test_first.py  test_first_or_default.py  test_getitem.py  test_group_by.py  test_group_join.py  test_grouping.py  test_intersect.py  test_join.py  test_last.py  test_last_or_default.py  test_log.py  test_lookup.py  test_max.py  test_min.py  test_of_type.py  test_order_by.py  test_parallel_queryable.py  test_pre_scan.py  test_predicates.py  test_queryable.py  test_range.py  test_record.py  test_relational.py  test_repeat.py  (+30 more)
tests/: test_as_parallel.py  test_asq.py  test_average.py  test_comparers.py  test_element_at.py  (+27 more)
(+116 files in other folders)
