[metadata]
name = asq
version = attr: asq.version.__version__
description = LINQ-for-objects style queries for Python iterables.
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/x-rst
url = https://github.com/sixty-north/asq
author = Sixty North AS
author_email: systems+asq@sixty-north.com
keywords = iterators iterables Python LINQ
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:
install_requires =

[options.extras_require]
dev = bumpversion
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; coverage ; pytest-cov ; hypothesis; tox

[options.packages.find]
where = src
